# trying_tui

./: Cargo.toml
game_of_life/: main.rs
matrix/: main.rs
tetris/: main.rs  screen_buffer.rs  tetris_box.rs
